--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "leaflet": "^1.0.3",
     "node-sass": "^4.5.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
