--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "leaflet": "^1.0.3",
+    "marked": "^0.3.6",
     "node-sass": "^4.5.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "sass-loader": "^6.0.3",
+    "showdown": "^1.6.4",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
