--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Bilo Lwabona",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.16.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -22,6 +23,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "leaflet": "^1.0.3",
+    "markdown-loader": "^2.0.0",
     "marked": "^0.3.6",
     "node-sass": "^4.5.2",
     "react": "^15.5.4",
