--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
+    "highlight": "^0.2.4",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "leaflet": "^1.0.3",
@@ -30,6 +31,7 @@
     "react-dom": "^15.5.4",
     "sass-loader": "^6.0.3",
     "showdown": "^1.6.4",
+    "showdown-highlight": "^1.0.0",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
