--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
     "highlight": "^0.2.4",
+    "history": "^1.17.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "leaflet": "^1.0.3",
@@ -29,6 +30,8 @@
     "node-sass": "^4.5.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "sass-loader": "^6.0.3",
     "showdown": "^1.6.4",
     "showdown-highlight": "^1.0.0",
