--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.1",
+    "css-loader": "^0.28.4",
     "file-loader": "^0.11.1",
-    "highlight": "^0.2.4",
+    "fs": "0.0.1-security",
+    "highlight.js": "^9.12.0",
     "history": "^1.17.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
@@ -28,13 +29,12 @@
     "markdown-loader": "^2.0.0",
     "marked": "^0.3.6",
     "node-sass": "^4.5.2",
+    "pygmentize-bundled": "^2.3.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "sass-loader": "^6.0.3",
-    "showdown": "^1.6.4",
-    "showdown-highlight": "^1.0.0",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
