--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my developer portfolio",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 1899",
+    "start": "webpack-dev-server --inline --progress --port 8080",
     "build": "webpack -p",
     "serve": "node server.js",
     "test": "test",
@@ -18,9 +18,12 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "bilo-xui": "0.0.2",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.1",
     "fs": "0.0.1-security",
+    "hamburgers": "^0.9.1",
     "highlight.js": "^9.12.0",
     "history": "^1.17.0",
     "html-loader": "^0.4.5",
@@ -37,7 +40,8 @@
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "xui": "0.0.1"
   },
   "dependencies": {
     "express": "^4.15.2",
