--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bilo-ui": "0.0.4",
     "bilo-xui": "0.0.2",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.1",
