--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bilo-ui": "0.0.4",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
+    "d3": "^4.10.0",
     "file-loader": "^0.11.1",
     "fs": "0.0.1-security",
     "hamburgers": "^0.9.1",
@@ -32,7 +33,9 @@
     "leaflet": "^1.0.3",
     "markdown-loader": "^2.0.0",
     "marked": "^0.3.6",
+    "mprogress": "^0.1.1",
     "node-sass": "^4.5.2",
+    "nprogress": "^0.2.0",
     "pygmentize-bundled": "^2.3.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
