--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "portfolio",
+  "name": "bilo-bio",
   "version": "0.0.1",
   "description": "my developer portfolio",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 8080",
+    "dev": "webpack-dev-server --inline --progress --port 8080",
+    "start": "node ./artifact/server.js",
     "build": "webpack -p",
+    "clean": "rm -rf ./dist",
     "serve": "node server.js",
-    "test": "test",
-    "clean": "rm -rf ./dist"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bilo Lwabona",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.16.2",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -39,8 +40,12 @@
     "pygmentize-bundled": "^2.3.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.6",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
