--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "bilo-ui": "0.0.4",
+    "bilo-ui": "0.0.5",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "d3": "^4.10.0",
@@ -55,5 +55,6 @@
   "dependencies": {
     "express": "^4.15.2",
     "express-history-api-fallback": "^2.2.1"
-  }
+  },
+  "repository": "https://github.com/bilo-io/bilo-bio.git"
 }
