--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "d3": "^4.10.0",
+    "draft-js": "^0.10.3",
     "file-loader": "^0.11.1",
     "fs": "0.0.1-security",
     "hamburgers": "^0.9.1",
@@ -53,6 +54,7 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "express": "^4.15.2",
     "express-history-api-fallback": "^2.2.1"
   },
