--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "css-loader": "^0.28.4",
     "d3": "^4.10.0",
     "draft-js": "^0.10.3",
+    "draft-js-hashtag-plugin": "^2.0.0-beta1",
+    "draft-js-linkify-plugin": "^2.0.0-beta1",
+    "draft-js-plugins-editor": "^2.0.0-beta10",
     "file-loader": "^0.11.1",
     "fs": "0.0.1-security",
     "hamburgers": "^0.9.1",
