--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "draft-js": "^0.10.3",
     "draft-js-hashtag-plugin": "^2.0.0-beta1",
     "draft-js-linkify-plugin": "^2.0.0-beta1",
+    "draft-js-mention-plugin": "^2.0.0-beta1",
     "draft-js-plugins-editor": "^2.0.0-beta10",
     "file-loader": "^0.11.1",
     "fs": "0.0.1-security",
