--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "history": "^1.17.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "immutable": "^3.8.2",
     "leaflet": "^1.0.3",
     "markdown-loader": "^2.0.0",
     "marked": "^0.3.6",
@@ -49,6 +50,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.3",
