--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bilo-bio",
   "version": "0.0.1",
   "description": "my developer portfolio",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --port 8080",
     "start": "node ./artifact/server.js",
@@ -20,18 +20,19 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "bilo-ui": "0.0.1",
+    "bilo-ui": "0.0.6",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "d3": "^4.10.0",
     "draft-js": "^0.10.3",
-    "draft-js-emoji-plugin": "^2.0.0-beta1",
-    "draft-js-hashtag-plugin": "^2.0.0-beta1",
-    "draft-js-linkify-plugin": "^2.0.0-beta1",
-    "draft-js-mention-plugin": "^2.0.0-beta1",
+    "draft-js-emoji-plugin": "^2.0.0-beta10",
+    "draft-js-hashtag-plugin": "^2.0.0-beta10",
+    "draft-js-linkify-plugin": "^2.0.0-beta10",
+    "draft-js-mention-plugin": "^2.0.0-beta10",
     "draft-js-plugins-editor": "^2.0.0-beta10",
     "file-loader": "^0.11.1",
     "fs": "0.0.1-security",
+    "fuzzy-search": "^2.0.0",
     "hamburgers": "^0.9.1",
     "highlight.js": "^9.12.0",
     "history": "^1.17.0",
