--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pygmentize-bundled": "^2.3.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-highlight-words": "^0.9.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
