--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nprogress": "^0.2.0",
     "pygmentize-bundled": "^2.3.0",
     "react": "^15.5.4",
+    "react-d3-cloud": "^0.5.0",
     "react-dom": "^15.5.4",
     "react-highlight-words": "^0.9.0",
     "react-redux": "^5.0.6",
