--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "d3": "^4.10.0",
+    "decorate-component-with-props": "^1.0.2",
     "draft-js": "^0.10.3",
+    "draft-js-autocomplete-plugin-creator": "^0.2.0",
     "draft-js-emoji-plugin": "^2.0.0-beta10",
     "draft-js-hashtag-plugin": "^2.0.0-beta10",
     "draft-js-linkify-plugin": "^2.0.0-beta10",
     "draft-js-mention-plugin": "^2.0.0-beta10",
     "draft-js-plugins-editor": "^2.0.0-beta10",
     "file-loader": "^0.11.1",
+    "find-with-regex": "^1.0.2",
     "fs": "0.0.1-security",
     "fuzzy-search": "^2.0.0",
     "hamburgers": "^0.9.1",
