--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "d3": "^4.10.0",
+    "detect-browser": "^2.0.0",
     "draft-js": "^0.10.3",
     "draft-js-emoji-plugin": "^2.0.0-beta10",
     "draft-js-hashtag-plugin": "^2.0.0-beta10",
@@ -56,6 +57,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.3",
+    "semver-compare": "^1.0.0",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5",
