learning react-dnd
added decorator support

cards can be dragged now

added item types

drop target connected

printing stuff out on drag-n-drop

dnd communication happening...

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.16.2",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -49,6 +50,8 @@
     "pygmentize-bundled": "^2.3.0",
     "react": "^15.5.4",
     "react-browser-support": "0.0.1",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.1",
