--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my developer portfolio",
   "main": "src/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --port 8080",
+    "dev": "webpack-dev-server --inline --progress --port 8081 -w",
     "start": "node ./artifact/server.js",
     "build": "webpack -p",
     "clean": "rm -rf ./dist",
