--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^15.5.4",
     "react-browser-support": "0.0.1",
     "react-dom": "^15.5.4",
+    "react-hljs": "^1.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
