--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "immutable": "^3.8.2",
+    "jsx-to-string": "^1.3.0",
     "leaflet": "^1.0.3",
     "markdown-loader": "^2.0.0",
     "marked": "^0.3.6",
@@ -50,6 +51,8 @@
     "react": "^15.5.4",
     "react-browser-support": "0.0.1",
     "react-dom": "^15.5.4",
+    "react-element-to-jsx-string": "^13.1.0",
+    "react-element-to-string": "^1.0.2",
     "react-hljs": "^1.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.1",
