--- a/package.json
+++ b/package.json
@@ -49,15 +49,16 @@
     "node-sass": "^4.5.2",
     "nprogress": "^0.2.0",
     "pygmentize-bundled": "^2.3.0",
-    "react": "^15.5.4",
+    "react": "^16.2.0",
     "react-browser-support": "0.0.1",
-    "react-dom": "^15.5.4",
+    "react-code-splitting": "^1.2.1",
+    "react-dom": "^16.2.0",
     "react-element-to-jsx-string": "^13.1.0",
     "react-element-to-string": "^1.0.2",
     "react-hljs": "^1.0.0",
     "react-redux": "^5.0.6",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
