--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "axios": "^0.16.2",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^8.1.2",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
@@ -34,8 +35,8 @@
     "draft-js-mention-plugin": "^2.0.0-beta10",
     "draft-js-plugins-editor": "^2.0.0-beta10",
     "file-loader": "^0.11.1",
-    "firebase": "^4.6.2",
     "find-with-regex": "^1.0.2",
+    "firebase": "^4.6.2",
     "fs": "0.0.1-security",
     "fuzzy-search": "^2.0.0",
     "hamburgers": "^0.9.1",
@@ -51,16 +52,17 @@
     "mprogress": "^0.1.1",
     "node-sass": "^4.5.2",
     "nprogress": "^0.2.0",
+    "prettier-eslint": "^8.7.0",
     "pygmentize-bundled": "^2.3.0",
     "react": "^15.5.4",
-    "react-d3-cloud": "^0.5.0",
     "react-browser-support": "0.0.1",
+    "react-d3-cloud": "^0.5.0",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^15.5.4",
-    "react-highlight-words": "^0.9.0",
     "react-element-to-jsx-string": "^13.1.0",
     "react-element-to-string": "^1.0.2",
+    "react-highlight-words": "^0.9.0",
     "react-hljs": "^1.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.1",
