--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "react-dom": "^16.2.0",
     "react-element-to-jsx-string": "^13.1.0",
     "react-element-to-string": "^1.0.2",
+    "react-highlight": "^0.10.0",
     "react-highlight-words": "^0.9.0",
+    "react-highlight.js": "^1.0.7",
     "react-hljs": "^1.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
