--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "immutable": "^3.8.2",
-    "jsx-to-string": "^1.3.0",
+    "jsx-to-string-2": "^1.0.0",
     "leaflet": "^1.0.3",
     "markdown-loader": "^2.0.0",
     "marked": "^0.3.6",
@@ -64,6 +64,7 @@
     "react-dom": "^16.2.0",
     "react-element-to-jsx-string": "^13.1.0",
     "react-element-to-string": "^1.0.2",
+    "react-elements-to-string": "^0.1.3",
     "react-highlight": "^0.10.0",
     "react-highlight-words": "^0.9.0",
     "react-highlight.js": "^1.0.7",
