--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "pygmentize-bundled": "^2.3.0",
     "react": "^16.2.0",
     "react-browser-support": "0.0.1",
+    "react-code-demo": "0.0.1",
     "react-code-splitting": "^1.2.1",
     "react-dom": "^16.2.0",
     "react-element-to-jsx-string": "^13.1.0",
