--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "webpack-dev-server --color --inline --progress --config webpack.config.js",
     "start": "node ./artifact/server.js",
     "build": "webpack -p --config webpack.config.js",
+    "build:demo": "webpack -p --config webpack.static.config.js",
     "clean": "rm -rf ./dist",
     "serve": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -79,6 +80,7 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.3",
     "semver-compare": "^1.0.0",
+    "static-site-generator-webpack-plugin": "^3.4.1",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5",
