--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-highlight-words": "^0.9.0",
     "react-highlight.js": "^1.0.7",
     "react-hljs": "^1.0.0",
+    "react-leaflet": "^1.8.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
