--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:demo": "webpack -p --config webpack.static.config.js",
     "clean": "rm -rf ./dist",
     "serve": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "bash ./scripts/release.sh"
   },
   "author": "Bilo Lwabona",
   "license": "ISC",
